[gd_scene load_steps=6 format=3 uid="uid://b5wog3bayx8tu"]

[ext_resource type="PackedScene" uid="uid://cwmt88khbkvfv" path="res://scenes/camera.tscn" id="1_intob"]
[ext_resource type="Script" path="res://scenes/ui/start_screen.gd" id="1_j1f6w"]
[ext_resource type="Texture2D" uid="uid://735tpj420ov1" path="res://assets/gui/gui_button_start.png" id="3_b8mq0"]
[ext_resource type="Texture2D" uid="uid://b4wfbx75c3pk" path="res://assets/gui/gui_button_options.png" id="4_bvfyd"]
[ext_resource type="Texture2D" uid="uid://bq8cinfq22jjc" path="res://assets/gui/gui_button_exit.png" id="5_pou0p"]

[node name="start_screen" type="Node2D"]
script = ExtResource("1_j1f6w")

[node name="camera" parent="." instance=ExtResource("1_intob")]

[node name="SpriteStart" type="Sprite2D" parent="."]
position = Vector2(1, -100)
texture = ExtResource("3_b8mq0")

[node name="SpriteOptions" type="Sprite2D" parent="."]
texture = ExtResource("4_bvfyd")

[node name="SpriteQuit" type="Sprite2D" parent="."]
position = Vector2(0, 100)
texture = ExtResource("5_pou0p")

[node name="StartButton" type="Button" parent="."]
offset_left = -99.0
offset_top = -134.0
offset_right = 101.0
offset_bottom = -66.0
flat = true

[node name="OptionsButton" type="Button" parent="."]
offset_left = -138.0
offset_top = -34.0
offset_right = 138.0
offset_bottom = 34.0
flat = true

[node name="QuitButton" type="Button" parent="."]
offset_left = -80.0
offset_top = 66.0
offset_right = 80.0
offset_bottom = 134.0
flat = true

[connection signal="button_up" from="StartButton" to="." method="_on_start_button_button_up"]
[connection signal="button_up" from="OptionsButton" to="." method="_on_options_button_button_up"]
[connection signal="button_up" from="QuitButton" to="." method="_on_quit_button_button_up"]
